ajout game design

--- a/main.tex
+++ b/main.tex
@@ -24,38 +24,34 @@
 \newpage
 
 \include{./pages/0_introduction.tex}
-    
 
-\newpage
+\include{./pages/planification.tex}
 
+\include{./pages/game_design.tex}
 
-\section{Conception et recherches}
-    
-    \include{./pages/planification.tex}
-    
-    \include{./pages/RechercheDocumentaire.tex}
+\include{./pages/RechercheDocumentaire.tex}
 
-    \include{pages/developpement}
-    
-    \include{./pages/generation_carte.tex}
-    
-    \include{pages/engine}
+\include{pages/developpement}
 
-    \include{pages/camera}
+\include{./pages/generation_carte.tex}
 
-    \include{pages/interface}
+\include{pages/engine}
 
-    \include{pages/assets}
+\include{pages/camera}
+
+\include{pages/interface}
+
+\include{pages/assets}
+
     
     
-    \include{./pages/gameplay.tex}
-        
-        
-    \subsection{communication avec le backend}
+\subsection{communication avec le backend}
 
 \section{Conclusion}
 
+\newpage
 
+\printbibliography[title={Références}]
 
 
 \end{document}
