--- a/pages/0_introduction.tex
+++ b/pages/0_introduction.tex
@@ -7,7 +7,7 @@ L'objectif de ce projet est de réaliser un jeu vidéo massivement multijoueur j
     \item \textit{Mode "Seigneur"} : le joueur ne contrôle pas directement un personnage, mais adopte une vue stratégique à l’échelle d’un royaume. Il donne des ordres aux péons en fonction des priorités et des besoins du territoire qu’il gouverne.
 \end{itemize}
 
-L’univers de jeu est composé de plusieurs royaumes, chacun dirigé par un seigneur différent. Ces royaumes sont en concurrence pour devenir la puissance dominante. Ce système s'inspire librement de la célèbre "Pixel War", un événement sur la plateforme Reddit (r/Place), où des milliers d'utilisateurs ont collaboré ou se sont affrontés pour s’approprier des espaces d’un immense canevas numérique. Bien que purement esthétique, cet événement a généré de véritables dynamiques sociales, entre alliances communautaires et rivalités de territoires. Notre ambition est de transposer ces dynamiques sociales dans un jeu structuré et compétitif, en donnant du sens aux interactions et aux conflits entre joueurs.
+L’univers de jeu est composé de plusieurs royaumes, chacun dirigé par un seigneur différent. Ces royaumes sont en concurrence pour devenir la puissance dominante. Ce système s'inspire librement de la célèbre "Pixel War", un événement sur la plateforme Reddit (r/Place)\cite{r/Place}, où des milliers d'utilisateurs ont collaboré ou se sont affrontés pour s’approprier des espaces d’un immense canevas numérique. Bien que purement esthétique, cet événement a généré de véritables dynamiques sociales, entre alliances communautaires et rivalités de territoires. Notre ambition est de transposer ces dynamiques sociales dans un jeu structuré et compétitif, en donnant du sens aux interactions et aux conflits entre joueurs.
 
 
 
