--- a/pages/RechercheDocumentaire.tex
+++ b/pages/RechercheDocumentaire.tex
@@ -1,7 +1,7 @@
 
 \subsection{Recherche documentaire}
-\subsubsection{AutoBiomes: procedural generation of multi-biome landscapes (2020)}
-
+\subsubsection{AutoBiomes: procedural generation of multi-biome landscapes (2020) \cite{Autobiome}}
+    
     
     \paragraph{Approche proposée pour la génération procédurale de terrains}
     Les auteurs présentent un système de génération procédurale de terrain combinant trois types d’approches : synthétique, physique et exemple-based (basée sur des exemples). L’objectif est de créer des paysages étendus, composés de différents biomes et peuplés de nombreux éléments.
@@ -64,6 +64,7 @@
 
 
     
-        \subsubsection{papier 2}
-        \subsubsection{papier 3}
+        \subsubsection{papier 2 UI \cite{UIpaper}}
+
+        \subsubsection{papier 3 DTM \cite{DTMpaper}}
         \subsubsection{papier 4}
