--- a/pages/assets.tex
+++ b/pages/assets.tex
@@ -4,7 +4,7 @@ En complément des fichiers générés par notre outil de génération procédur
 
 Compte tenu du temps limité imparti au projet et de nos ressources humaines, nous avons fait le choix stratégique de \textbf{ne pas modéliser nous-mêmes ces objets 3D}. En effet, la création d’assets personnalisés demande non seulement des compétences artistiques spécifiques (modélisation, texturage, rigging), mais également un temps de production non négligeable que nous avons préféré consacrer au développement technique et fonctionnel du jeu.
 
-Nous nous sommes donc tournés vers des bibliothèques en ligne proposant des modèles 3D libres de droits. Après quelques recherches, nous avons sélectionné une collection d’objets au style \textbf{low poly}, à la fois léger à afficher et esthétiquement cohérent avec notre direction artistique. Le style low poly a en outre l’avantage d’être performant pour le rendu en temps réel dans un navigateur, tout en gardant une identité visuelle marquée et facilement identifiable.
+Nous nous sommes donc tournés vers des bibliothèques en ligne proposant des modèles 3D libres de droits\cite{assetPack}. Après quelques recherches, nous avons sélectionné une collection d’objets au style \textbf{low poly}, à la fois léger à afficher et esthétiquement cohérent avec notre direction artistique. Le style low poly a en outre l’avantage d’être performant pour le rendu en temps réel dans un navigateur, tout en gardant une identité visuelle marquée et facilement identifiable.
 
 \begin{figure}[!h]
     \centering
