--- a/header.tex
+++ b/header.tex
@@ -61,6 +61,9 @@
 \usepackage[table,xcdraw,svgnames]{xcolor}
 \usepackage[colorlinks=true, linkcolor=blue, urlcolor=blue, citecolor=blue, pdfborder={0 0 0}]{hyperref}
 
+\usepackage[backend=biber,style=numeric,backref=true]{biblatex}
+\addbibresource{biblio.bib}
+
 \usepackage{tikz}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
